src/objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>Abbreviated_Card__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Abbreviated Card #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Country_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Oppty_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account/Oppty Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State_Province_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account State/Province Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_IOL_Only__c</fullName>
        <label>Account Type - IOL Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Flex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_of_Vehs__c</fullName>
        <label>Account # of Vehs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acct_For_Email_Merge__c</fullName>
        <formula>Case__r.Account.Wex_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct # For Email Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Info Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjustment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjustment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_of_Claim__c</fullName>
        <formula>IF( Claim_Status__c = &quot;Pending&quot;, (TODAY() - Date_Received__c),
IF( Claim_Status__c = &quot;Pending - Rebuttal Received&quot;, (TODAY() -  Date_Rebuttal_Letter_Received__c), null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Claim</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Email_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Email #1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agency_Email_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Email #2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agency_Phone_Number_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Phone Number #1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Agency_Phone_Number_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Phone Number #2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Allowable_Dispute_Dollars__c</fullName>
        <label>Allowable Dispute Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allowable_Dispute_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowable Dispute End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allowable_Dispute_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowable Dispute Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allowable_Dispute_Trans_Count__c</fullName>
        <label>Allowable Dispute Trans Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allowable_Disputed_Amount__c</fullName>
        <formula>IF(Claim_Status__c = &quot;Closed&quot;, Allowable_Dispute_Dollars__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowable Disputed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amt_of_Transactions_SAFE_Reported__c</fullName>
        <label>Amt of Transactions SAFE Reported</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Review_Recommendation__c</fullName>
        <label>App Review Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business/PG ID Theft - suspected/confirmed Decline</fullName>
                </value>
                <value>
                    <fullName>Business/PG ID Theft - suspected/confirmed Term</fullName>
                </value>
                <value>
                    <fullName>Not Application Fraud - Handle BAU</fullName>
                </value>
                <value>
                    <fullName>Suspected/Confirmed Application Fraud - Decline</fullName>
                </value>
                <value>
                    <fullName>Suspected/Confirmed Application Fraud - Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Review_Reccomendation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Review Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Claims2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOCA_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check for Yes</inlineHelpText>
        <label>BOCA Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_ID_STD_EMB_GTag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CO ID / STD EMB / GTag</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardholder_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cardholder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_ID_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Carrier ID / Company #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Name_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Name / Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargeOff_Amount__c</fullName>
        <label>ChargeOff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargeOff_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ChargeOff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargeOff_Requested_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ChargeOff Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargeOff_Trans_Count__c</fullName>
        <label>ChargeOff Trans Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chargeback_Amount__c</fullName>
        <label>Chargeback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chargeback_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Chargeback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chargeback_Deadline__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Chargeback Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chargeback_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chargeback Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chargeback_Transaction_Count__c</fullName>
        <label>Chargeback Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chargeback_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Chargeback Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Dispute_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Dispute End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Dispute_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Dispute Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Set_Up_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Set Up Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Claims_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <formula>IF(not(isnull(Date_Received__c)) &amp;&amp; TEXT(Resolution__c) = &quot;Pending&quot;, &quot;Pending&quot;, 
IF(not(isnull(Date_Received__c)) &amp;&amp; TEXT(Resolution__c) = &quot;Pending - Rebuttal Received&quot;, &quot;Pending - Rebuttal Received&quot;, 
IF(not(isnull(Date_Resolved__c)), &quot;Closed&quot;, &quot;-&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Claim_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complete Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <formula>(Assigned_To__r.FirstName + &quot; &quot; + Assigned_To__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_SAR_Filing_Analyst__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance SAR Filing Analyst</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_SAR_Filing_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance SAR Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Fraud_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Confirmed Fraud Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract / Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Approved__c</fullName>
        <label>Credit Line Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Requested__c</fullName>
        <label>Credit Line Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Line__c</fullName>
        <label>Credit Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Liability__c</fullName>
        <label>Customer Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Loss__c</fullName>
        <label>Customer Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIN_1_Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DIN #1 Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DIN_1_Termd_at_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DIN #1 Termd at Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DIN #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Account_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Account Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Additional_Info_Letter_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Additional Info Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Applied__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Claim_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Claim Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Detected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Detected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Dispute_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Dispute Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Fraud_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Fraud Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rebuttal_Letter_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Rebuttal Letter Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rebuttal_Letter_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Rebuttal Letter Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolution_Letter_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Resolution Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Review_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Review Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SAFE_Reported__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SAFE Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SAR_Filed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SAR Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Claim_Letter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Claim Letter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Transaction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of First Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Report_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Report #1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Report_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Report #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Detections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detection_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detection Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detection__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Detection:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispute_Form_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dispute Form Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dispute_Reported_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dispute Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dispute_Type__c</fullName>
        <label>Dispute Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>ATO (Account Take-Over)</fullName>
                </value>
                <value>
                    <fullName>Collusion</fullName>
                </value>
                <value>
                    <fullName>Counterfeit</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Duplicate Card(s)</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Internal Error</fullName>
                </value>
                <value>
                    <fullName>Lost/Stolen</fullName>
                </value>
                <value>
                    <fullName>Marketer Error</fullName>
                </value>
                <value>
                    <fullName>Operational - Network, etc.</fullName>
                    <label>Network / Terminal Data Issue - Not Fraud</label>
                </value>
                <value>
                    <fullName>NRI (Mail Fraud-Not Received as Issued)</fullName>
                    <isActive>false</isActive>
                    <label>NRI (Mail Fraud-Not Received as Issued)</label>
                </value>
                <value>
                    <fullName>Phishing</fullName>
                </value>
                <value>
                    <fullName>PlusCheks</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>SBQC</fullName>
                </value>
                <value>
                    <fullName>SBWO</fullName>
                </value>
                <value>
                    <fullName>Shell/Texaco Prompt</fullName>
                    <isActive>false</isActive>
                    <label>Shell/Texaco Prompt</label>
                </value>
                <value>
                    <fullName>Signature</fullName>
                    <isActive>false</isActive>
                    <label>Signature</label>
                </value>
                <value>
                    <fullName>Station</fullName>
                </value>
                <value>
                    <fullName>Tank Capacity</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>Undisputed Fraud</fullName>
                    <isActive>false</isActive>
                    <label>Undisputed Fraud</label>
                </value>
                <value>
                    <fullName>White Plastic (Skimmed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispute_s_Date_Resolved__c</fullName>
        <formula>IF(ISBLANK(Date_Resolved__c), null, Date_Resolved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dispute&apos;s Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disputed_Amount__c</fullName>
        <formula>Total_Claim_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disputed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driver_Employment_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver Employment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driver_Employment_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driver_Name_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver Name #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>CASE( 
  MOD( Date_Dispute_Received__c - DATE( 1900, 1, 7 ), 7 ),
  1, Date_Dispute_Received__c + 14,
  2, Date_Dispute_Received__c + 14,
  3, Date_Dispute_Received__c + 14,
  4, Date_Dispute_Received__c + 14,
  5, Date_Dispute_Received__c + 14,
  6, Date_Dispute_Received__c + 13,
  7, Date_Dispute_Received__c + 12,
  Date_Dispute_Received__c + 10
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFS_Absorbed_Amt__c</fullName>
        <label>EFS Absorbed Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFS_Absorbed_Transaction_Count__c</fullName>
        <label>EFS Absorbed Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFS_Customer_Liable_Amt__c</fullName>
        <label>EFS Customer Liable $ Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFS_Customer_Liable_of_Trans__c</fullName>
        <label>EFS Customer Liable # of Trans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFS_Liability__c</fullName>
        <label>EFS Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Element_Count__c</fullName>
        <label>Element Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Thread_ID__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Spend__c</fullName>
        <label>Estimated Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Recovery_Amount__c</fullName>
        <label>Final Recovery Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Adjustment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check for Yes</inlineHelpText>
        <label>Financial Adjustment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_Claim_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Claim Asset</label>
        <referenceTo>Fraud_Purchase_Device__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fraud_Score__c</fullName>
        <label>Fraud Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fraud_Type__c</fullName>
        <label>Fraud Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APPLICATION FRAUD</fullName>
                </value>
                <value>
                    <fullName>CARD NOT PRESENT</fullName>
                </value>
                <value>
                    <fullName>COUNTERFEIT</fullName>
                </value>
                <value>
                    <fullName>COUNTERFEIT CHIP FALLBACK</fullName>
                </value>
                <value>
                    <fullName>DATA BREACH</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE MISUSE</fullName>
                </value>
                <value>
                    <fullName>FILING</fullName>
                </value>
                <value>
                    <fullName>FORCE POST</fullName>
                </value>
                <value>
                    <fullName>LOST/STOLEN</fullName>
                </value>
                <value>
                    <fullName>MANUAL</fullName>
                </value>
                <value>
                    <fullName>NON FRAUD DISPUTE</fullName>
                </value>
                <value>
                    <fullName>ONLINE</fullName>
                </value>
                <value>
                    <fullName>ONLINE SECURE CODE</fullName>
                </value>
                <value>
                    <fullName>SKIMMING</fullName>
                </value>
                <value>
                    <fullName>SOCIAL ENGINEERING</fullName>
                </value>
                <value>
                    <fullName>UNDETERMINED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Card_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Card Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <label>Funder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Unfunded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gtag__c</fullName>
        <description>Hidden field for GSA report - mirrors CO ID/STD EMB/Gtag field on claim</description>
        <formula>CO_ID_STD_EMB_GTag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gtag</label>
        <type>Text</type>
    </fields>
</CustomObject>